# mcp-service-template

./: .envrc  .gitignore  .pre-commit-config.yaml  MANIFEST.in  NEXT_STEPS.md  README.md  STATUS.md  check_coverage.py  mypy.ini  pyproject.toml  pyproject.toml.template  setup_template.py  test_uv_compatibility.py  validate_template.py
docs/: ARCHITECTURE.md  CUSTOMIZATION.md  DEVELOPMENT.md  SETUP.md
docs/examples/: ECOMMERCE_EXAMPLE.md
src/service_name_mcp/: __init__.py  mcp_instance.py  server.py
src/service_name_mcp/analytics_domain/: README.md  __init__.py  analytics_config.py  analytics_prompts.py  analytics_tools.py
src/service_name_mcp/common/: __init__.py  config.py  logging.py
src/service_name_mcp/core/: __init__.py  core_prompts.py
src/service_name_mcp/core/prompts/: analyst_prompt.md  investigate_bug_prompt.md  report_bug_prompt.md
src/service_name_mcp/docs_domain/: __init__.py  docs_tools.py
src/service_name_mcp/file_processing_domain/: __init__.py  best_practices.md  file_processing_tools.py
src/service_name_mcp/rest_api_domain/: __init__.py  best_practices.md  rest_api_tools.py
src/service_name_mcp/semantic_model_domain/: __init__.py
src/service_name_mcp/sqlite_domain/: __init__.py  best_practices.md  sqlite_tools.py
tests/: test_server.py
tests/test_analytics_domain/: __init__.py  test_analytics_tools.py
tests/test_docs_domain/: __init__.py  test_docs_tools.py
tests/test_file_processing_domain/: __init__.py  test_file_processing_tools.py
tests/test_rest_api_domain/: __init__.py  test_rest_api_tools.py
tests/test_sqlite_domain/: __init__.py  test_sqlite_tools.py
